WeakPtrFactory should allow downcasting https://bugs.webkit.org/show_bug.cgi?id=177389 <rdar://problem/34604174>

Reviewed by Geoffrey Garen.

Source/WTF:

In this patch, WeakPtrFactory is enhanced with the ability to create WeakPtrs
of its owner's sub classes and have them point to the same WeakReference.

* wtf/WeakPtr.h:
(WTF::WeakPtr::WeakPtr):
We cannot determine the base class of type T, thus no friends. It is made public
such that WeakPtrFactory with a base class type U can create a derived type T
WeakPtr.
(WTF::WeakPtrFactory::createWeakPtr const):

Tools:

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/WTF/WeakPtr.cpp:
(TestWebKitAPI::Base::foo):
(TestWebKitAPI::Base::createWeakPtr):
(TestWebKitAPI::Derived::foo):
(TestWebKitAPI::TEST):


Canonical link: https://commits.webkit.org/193917@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@222633 268f45cc-cd09-0410-ab3c-d52691b4dbfc